welcome.lessons.welcome.methods.picture.MethodsPicture.scala.code
override def run() {

def faireMotif(c:Color) {

	def marqueSol(c:Color) {

		setCouleurBrosse(c)	
		baisseBrosse(c)
		leveBrosse(c)
	
	}

	def faireV(c) {

		avance()
		marqueSol(c)
		avance()
		gauche()
		avance()
		marqueSol(c)
		droite()
		avance()
		droite()
		avance()
		marqueSol(c)
		gauche()
		avance()
		gauche()	
	
	}
	faireV(yellow)
	faireV(red)
	faireV(blue)
	faireV(green)
	
	}
		
}

def seReplacer() {
	for (compteur1 <- 1 to 5) {
		avance()
	}
}

def faireLigne() {
	
	for (compteur2 <- 1 to 9) {
		faireMotif(c)
		seReplacer()
	}
}

def changerLigne() {
	gauche()
	seReplacer()
	droite()
}

for (compteur3 <- 1 to 9) {
	faireLigne()
	changerLigne()
}

	
}
}

